data/derived/sp14/progs/unify/prog1907.ml.out
Characters 124-137:
  else if (List.hd lst) = (List.tl lst) then
                          ^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
